[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "AskSurf"
authors = [{name = "Joar Heimonen", email = "joarheimonen@live.no"}]
description = "A cli tool for interacting with the dolphin-mixtral-8x7B model"
readme = "README.md"
version = "0.4"
requires-python = ">=3.6,<4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "requests",
    "tqdm"
]